--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 
     </div>
 
+    <div class="container3">
+        <div class="title">
+            <p class="desc">- Favorite moments together /<i class="fa-regular fa-heart"></i></p>
+        </div>
+        
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
