--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <div class="song-container">
                         <div class="music-photo"></div>
                         <div class="mid-song">
-                            <div></div>
-                            <div></div>
-                            <div></div>
+                            <div class="songwhat">
+                                <p>I love my wife so much - Jay</p>
+                            </div>
                             <div class="range-container">
                                 <input type="range" id="range">
                             </div>
