--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <div class="song-container">
                         <div class="music-photo"></div>
                         <div class="mid-song">
-                            <div class="songwhat">
-                                <p>I love my wife so much - Jay</p>
+                            <div>
+                                <p class="forU">I love my wife so much - Jay</p>
                             </div>
                             <div class="range-container">
                                 <input type="range" id="range">
